# optik-ecosystemn

./: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
.github/: copilot-instructions.md
optik-website/: COMPREHENSIVE_AUDIT_REPORT.sh  EXECUTE_PHASE_1_VAULT.sh  FINAL_CHECKLIST.txt  FINAL_LAUNCH_STATUS.md  HYDRATION_FIX.md  WITHDRAWAL_RULES.md  deploy-dex.sh  hot-wallet.json  next.config.js  package.json  set-metadata.js  setup-wallets.sh  start-dex.sh  verify-and-setup.sh
optik-website/programs/memecoin-factory/: Cargo.toml
optik-website/programs/memecoin-factory/src/: lib.rs
optik-website/programs/optik-dex/: Cargo.toml
optik-website/programs/optik-dex/src/: lib.rs
optik-website/programs/optik-token/: Cargo.toml
optik-website/programs/vault/: Cargo.toml
optik-website/programs/vault/src/: lib.rs
optik-website/public/docs/: OPTIK_Whitepaper.md
optik-website/src/app/: globals.css  globals.css.backup  layout.tsx  loading.tsx  page.tsx
optik-website/src/components/: RevenueTransparency.tsx  VaultTrustIndicator.tsx  WalletProvider.tsx  conversion-funnel.tsx  revenue-optimizer.tsx
optik-website/src/hooks/: usePerpetualsIntegration.ts
optik-website/src/lib/: api.ts  arcade-rewards.ts  config.ts  index.ts  memecoin-pricing.ts  openai.ts  optik-config.ts  perps-client.ts  perps-integration.ts  price-oracle.ts  revenue-calculator.ts  solana.ts  stripe-client.ts  supabase.ts  token-factory.ts  utils.ts  wallet-error-suppressor.ts
optik-website/src/middleware/: security.ts
optik-website/src/types/: global.d.ts
(+53 files in other folders)
